## diagpos = 1 uses my reinterpretation of Vargas' algorithm
## pcafit adds same parameter

## 20160713
##
## replaced zpmatrix.c with zpmC.cpp
## added Rcpp infrastructure as needed
## zpm calls zpmC
## removed some unnecessary return()'s
## cleaned up some source code formatting
## changed default fill value for padmatrix to mean
## removed foucault test reduction routines

## 20160714
##
## fixed line in separate.wf
## added gpcapsi -- my iterative PCA based algorithm
## pcafit changes options for diagpos=c("v", "u", "g") and adds trace
## use pcafit(..., diagpos="g", trace=n, ...) to call gpcapsi

## 20160715
##
## pcaest.r demo calls library function plotn instead of custom version

## 20160717
##
## updated help files
## added example for pcafit (could do this for others someday)

## 20160725
##
## replace rzernike with C++ version

## 20170910
##
## added modified brcutpuw to this package
## calls to phase unwrapping routines changed

## 20170911
##
## added sconic - more accurate wavefront error for testing asphere at coc
## changed default test wavelength and scaling in zconic

## 20170920
##
## raw image file support added

## 20181229
##
## improved structure of aiapsi

## 20181230
##
## split up R source files

## 20190102
##
## lspsi, aiapsi are wrappers for
## lspsiC, aiapsiC

## 20190103
##
## gpcapsi is a wrapper for gpcapsiC
## simplified algorithm structure by
## replacing nonlinear optimization with
## iterated linear operations

## 20190104
##
## added variable defocus to tiltpsi

## 20190110
##
## C++ rewrite of tiltpsi
## new "high level" psi fitting routine
## one more R source file split

## 20190221
##
## minor fixes to psifit
## psfit_options can get or set options for psifit

## 20190309
##
## fftfit changed for compatibility

## 20191024
##
## zpmC uses a new recurrence relation

## 20200719
##
## Low level phase unwrapping code is now
## written in C++
##
## more file splits to better group routines